# Phantom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
glad/: glad.c  glad.h
include/: ElementBufferObject.hpp  GLSLParser.hpp  MainApplication.hpp  Mesh.hpp  Shader.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  Window.hpp
include/Core/: GLSLParser.hpp
include/Graphic/: ElementBufferObject.hpp  RenderContext.hpp  Shader.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
shaders/: default.glsl
src/: ElementBufferObject.cpp  GLSLParser.cpp  MainApplication.cpp  Mesh.cpp  Shader.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  Window.cpp  main.cpp
src/Core/: GLSLParser.cpp  MainApplication.cpp  Window.cpp
src/Graphic/: ElementBufferObject.cpp  RenderContext.cpp  Shader.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
